# foundation-model-paper

./: README.md
benchmark_public_datasets/: 1_benchmark_algorithms.sh  2_ablate_tasks_in_np_ne_method.sh  3_avg_vs_most_recent_embedding.sh  srun_optuna_train_eval.sh
benchmark_public_datasets/benchmarker/: pyproject.toml  setup.cfg
benchmark_public_datasets/benchmarker/src/: datasets.py  features.py  logging.py  model.py  train_evaluate.py
benchmark_public_datasets/benchmarker/src/configs/: dataset.py  model.py  train.py
benchmark_public_datasets/configs/: alpha_designed_features.yaml  dataset_with_embeddings.yaml  model_train.yaml  model_train_large.yaml  optuna_search_space.yaml  retail_designed_features.yaml  rosbank_designed_features.yaml  sber_designed_features.yaml
public_datasets/: 0_alter_column_names.py  1_load_datasets_into_clickhouse.py  2_create_train_test_split.py  3_import_embeddings.py  README.md  sources.txt
