[metadata]
name = benchmarker
author = Featurespace
author_email = info@featurespace.com

[options]
python_requires = >=3.8
install_requires =
    click >= 7.0
    clickhouse-driver >= 0.0.18
    tensorflow == 2.8
    protobuf >= 3.9.2, < 3.20  # workaround for TF issue (https://github.com/tensorflow/tensorflow/issues/53234)
    pydantic >= 1.8.1
    omegaconf >= 2.0.6
    pandas == 1.5.3
    optuna == 3.1.1
    loguru == 0.7.0
    scikit-learn == 1.2.2
    yq == 3.2.1

packages = find:

[options.extras_require]
dev =
    pytest >= 4.1.0
    black ~= 22.3.0
    isort ~= 5.10.1
    flake8 ~= 4.0.1
    flake8-black ~= 0.2.4
    flake8-isort ~= 4.1.1
    mypy ~= 0.931
    pre-commit ~= 2.17.0

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    benchmarker = src.train_evaluate:train_evaluate

[flake8]
# BLK enforces Black code style (via flake8-black)
# I enforces sorted imports (via flake8-isort)
select = B,C,E,F,W,T4,B9,BLK,I
ignore = E203,E266,E501,W503,F403,F401
max-line-length = 120
max-complexity = 10
